imported CPAN::Meta::Requirements from CPAN::Meta distribution

--- a/dist.ini
+++ b/dist.ini
@@ -1,8 +1,9 @@
 name    = CPAN-Meta-Requirements
 author  = David Golden <dagolden@cpan.org>
-license = Apache_2_0
-copyright_holder = David Golden
-copyright_year   = 2012
+author  = Ricardo Signes <rjbs@cpan.org>
+license = Perl_5
+copyright_holder = David Golden and Ricardo Signes
+copyright_year   = 2010
 
 [@DAGOLDEN]
 :version = 0.027
