--- a/dist.ini
+++ b/dist.ini
@@ -5,7 +5,15 @@ license = Perl_5
 copyright_holder = David Golden and Ricardo Signes
 copyright_year   = 2010
 
-[@DAGOLDEN]
+[@Filter]
+-bundle = @DAGOLDEN
+-remove = Test::PodSpelling
+-remove = MakeMaker
 :version = 0.027
+
+[Test::PodSpelling]
 stopwords = invocant
+
+[MakeMaker]
+eumm_version = 6.17
 
