dist.ini tweaks

--- a/dist.ini
+++ b/dist.ini
@@ -5,17 +5,14 @@ license = Perl_5
 copyright_holder = David Golden and Ricardo Signes
 copyright_year   = 2010
 
-[@Filter]
--bundle = @DAGOLDEN
--remove = Test::PodSpelling
+[@DAGOLDEN]
+:version = 0.048
 -remove = MakeMaker
-:version = 0.027
-
-[Test::PodSpelling]
 stopwords = invocant
 
 [MakeMaker]
 eumm_version = 6.17
 
 [DualLife]
+:version = 0.03
 eumm_bundled = 1
