--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,7 @@ copyright_year   = 2010
 
 [@DAGOLDEN]
 :version = 0.072
+Test::MinimumVersion.max_target_perl = 5.006
 stopwords = invocant
 
 [MakeMaker::Highlander]
