--- a/dist.ini
+++ b/dist.ini
@@ -9,6 +9,7 @@ copyright_year   = 2010
 :version = 0.072
 Test::MinimumVersion.max_target_perl = 5.006
 stopwords = invocant
+stopwords = dist
 
 [MakeMaker::Highlander]
 :version = 0.003
