remove names referencing DAGOLDEN dzil bundle
The dist.ini in the repo is not generated, and is no longer using the
DAGOLDEN pluginbundle, so remove the comments and names referencing it.
They only serve to confuse.

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,3 @@
-; This file is generated from dist.ini.meta by dzil bakeini.
-; Edit that file or the bundles contained within for long-term changes.
 name = CPAN-Meta-Requirements
 author = David Golden <dagolden@cpan.org>
 author = Ricardo Signes <rjbs@cpan.org>
@@ -7,145 +5,145 @@ license = Perl_5
 copyright_holder = David Golden and Ricardo Signes
 copyright_year = 2010
 
-[RewriteVersion / Dist::Zilla::PluginBundle::DAGOLDEN/RewriteVersion]
+[RewriteVersion]
 
-[Git::Contributors / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Contributors]
+[Git::Contributors]
 
-[Git::GatherDir / Dist::Zilla::PluginBundle::DAGOLDEN/Git::GatherDir]
+[Git::GatherDir]
 exclude_filename = README.mkdn
 exclude_filename = cpanfile
 exclude_filename = Makefile.PL
 
-[PruneCruft / Dist::Zilla::PluginBundle::DAGOLDEN/PruneCruft]
+[PruneCruft]
 
-[ManifestSkip / Dist::Zilla::PluginBundle::DAGOLDEN/ManifestSkip]
+[ManifestSkip]
 
-[InsertCopyright / Dist::Zilla::PluginBundle::DAGOLDEN/InsertCopyright]
+[InsertCopyright]
 
-[SurgicalPodWeaver / Dist::Zilla::PluginBundle::DAGOLDEN/SurgicalPodWeaver]
+[SurgicalPodWeaver]
 config_plugin = @DAGOLDEN
 post_code_replacer = replace_with_nothing
 replacer = replace_with_comment
 
-[Pod2Readme / Dist::Zilla::PluginBundle::DAGOLDEN/Pod2Readme]
+[Pod2Readme]
 
-[License / Dist::Zilla::PluginBundle::DAGOLDEN/License]
+[License]
 
-[Test::Compile / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Compile]
+[Test::Compile]
 fake_home = 1
 xt_mode = 1
 
-[Test::MinimumVersion / Dist::Zilla::PluginBundle::DAGOLDEN/Test::MinimumVersion]
+[Test::MinimumVersion]
 max_target_perl = 5.006
 
-[Test::ReportPrereqs / Dist::Zilla::PluginBundle::DAGOLDEN/Test::ReportPrereqs]
+[Test::ReportPrereqs]
 
-[Test::PodSpelling / Dist::Zilla::PluginBundle::DAGOLDEN/Test::PodSpelling]
+[Test::PodSpelling]
 stopwords = invocant
 stopwords = dist
 
-[Test::Perl::Critic / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Perl::Critic]
+[Test::Perl::Critic]
 
-[MetaTests / Dist::Zilla::PluginBundle::DAGOLDEN/MetaTests]
+[MetaTests]
 
-[PodSyntaxTests / Dist::Zilla::PluginBundle::DAGOLDEN/PodSyntaxTests]
+[PodSyntaxTests]
 
-[PodCoverageTests / Dist::Zilla::PluginBundle::DAGOLDEN/PodCoverageTests]
+[PodCoverageTests]
 
-[Test::Portability / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Portability]
+[Test::Portability]
 options = test_one_dot = 0
 
-[Test::Version / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Version]
+[Test::Version]
 
-[Authority / Dist::Zilla::PluginBundle::DAGOLDEN/Authority]
+[Authority]
 authority = cpan:DAGOLDEN
 do_munging = 0
 
-[MinimumPerl / Dist::Zilla::PluginBundle::DAGOLDEN/MinimumPerl]
+[MinimumPerl]
 
-[AutoPrereqs / Dist::Zilla::PluginBundle::DAGOLDEN/AutoPrereqs]
+[AutoPrereqs]
 skip = ^t::lib
 
-[MetaNoIndex / Dist::Zilla::PluginBundle::DAGOLDEN/MetaNoIndex]
+[MetaNoIndex]
 directory = t
 directory = xt
 directory = examples
 directory = corpus
 package = DB
 
-[MetaProvides::Package / Dist::Zilla::PluginBundle::DAGOLDEN/MetaProvides::Package]
+[MetaProvides::Package]
 meta_noindex = 1
 
-[GithubMeta / Dist::Zilla::PluginBundle::DAGOLDEN/GithubMeta]
+[GithubMeta]
 issues = 1
 remote = origin
 remote = github
 
-[Prereqs::AuthorDeps / Dist::Zilla::PluginBundle::DAGOLDEN/Prereqs::AuthorDeps]
+[Prereqs::AuthorDeps]
 ; authordep Pod::Weaver::PluginBundle::DAGOLDEN
 
-[MetaYAML / Dist::Zilla::PluginBundle::DAGOLDEN/MetaYAML]
+[MetaYAML]
 
-[MetaJSON / Dist::Zilla::PluginBundle::DAGOLDEN/MetaJSON]
+[MetaJSON]
 
-[CPANFile / Dist::Zilla::PluginBundle::DAGOLDEN/CPANFile]
+[CPANFile]
 
-[ExecDir / Dist::Zilla::PluginBundle::DAGOLDEN/ExecDir]
+[ExecDir]
 
-[ShareDir / Dist::Zilla::PluginBundle::DAGOLDEN/ShareDir]
+[ShareDir]
 
-[MakeMaker / Dist::Zilla::PluginBundle::DAGOLDEN/MakeMaker]
+[MakeMaker]
 default_jobs = 9
 eumm_version = 6.17
 
-[PromptIfStale / Dist::Zilla::PluginBundle::DAGOLDEN/PromptIfStale]
+[PromptIfStale]
 check_all_plugins = 1
 modules = Dist::Zilla
 modules = Dist::Zilla::PluginBundle::DAGOLDEN
 
-[CopyFilesFromBuild::Filtered / Dist::Zilla::PluginBundle::DAGOLDEN/CopyFilesFromBuild::Filtered]
+[CopyFilesFromBuild::Filtered]
 copy = Makefile.PL
 
-[Manifest / Dist::Zilla::PluginBundle::DAGOLDEN/Manifest]
+[Manifest]
 
-[Git::CheckFor::CorrectBranch / Dist::Zilla::PluginBundle::DAGOLDEN/Git::CheckFor::CorrectBranch]
+[Git::CheckFor::CorrectBranch]
 
-[Git::Check / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Check]
+[Git::Check]
 allow_dirty = Makefile.PL
 
-[CheckMetaResources / Dist::Zilla::PluginBundle::DAGOLDEN/CheckMetaResources]
+[CheckMetaResources]
 
-[CheckPrereqsIndexed / Dist::Zilla::PluginBundle::DAGOLDEN/CheckPrereqsIndexed]
+[CheckPrereqsIndexed]
 
-[CheckChangesHasContent / Dist::Zilla::PluginBundle::DAGOLDEN/CheckChangesHasContent]
+[CheckChangesHasContent]
 
-[RunExtraTests / Dist::Zilla::PluginBundle::DAGOLDEN/RunExtraTests]
+[RunExtraTests]
 default_jobs = 9
 
-[TestRelease / Dist::Zilla::PluginBundle::DAGOLDEN/TestRelease]
+[TestRelease]
 
-[ConfirmRelease / Dist::Zilla::PluginBundle::DAGOLDEN/ConfirmRelease]
+[ConfirmRelease]
 
-[UploadToCPAN / Dist::Zilla::PluginBundle::DAGOLDEN/UploadToCPAN]
+[UploadToCPAN]
 
-[Git::Commit / Dist::Zilla::PluginBundle::DAGOLDEN/Commit_Dirty_Files]
+[Git::Commit]
 allow_dirty = Makefile.PL
 commit_msg = Update Makefile.PL
 
-[Git::Tag / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Tag]
+[Git::Tag]
 tag_format = release-%v
 
-[NextRelease / Dist::Zilla::PluginBundle::DAGOLDEN/NextRelease]
+[NextRelease]
 
-[BumpVersionAfterRelease / Dist::Zilla::PluginBundle::DAGOLDEN/BumpVersionAfterRelease]
+[BumpVersionAfterRelease]
 
-[Git::Commit / Dist::Zilla::PluginBundle::DAGOLDEN/Commit_Changes]
+[Git::Commit]
 allow_dirty = Changes
 allow_dirty = Makefile.PL
 allow_dirty_match = ^lib
 commit_msg = After release: bump $VERSION and timestamp Changes
 
-[Git::Push / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Push]
+[Git::Push]
 push_to = origin
 
 [MakeMaker::Highlander]
