list pod weaver plugin bundle as authordep

--- a/dist.ini
+++ b/dist.ini
@@ -20,6 +20,7 @@ exclude_filename = Makefile.PL
 
 [InsertCopyright]
 
+; authordep Pod::Weaver::PluginBundle::DAGOLDEN
 [SurgicalPodWeaver]
 config_plugin = @DAGOLDEN
 post_code_replacer = replace_with_nothing
