add authordep comment for DAGOLDEN pod weaver

--- a/dist.ini
+++ b/dist.ini
@@ -82,6 +82,7 @@ remote = origin
 remote = github
 
 [Prereqs::AuthorDeps / Dist::Zilla::PluginBundle::DAGOLDEN/Prereqs::AuthorDeps]
+; authordep Pod::Weaver::PluginBundle::DAGOLDEN
 
 [MetaYAML / Dist::Zilla::PluginBundle::DAGOLDEN/MetaYAML]
 
