dist.ini: fix over-aggressive name cleanup

--- a/dist.ini
+++ b/dist.ini
@@ -125,7 +125,7 @@ default_jobs = 9
 
 [UploadToCPAN]
 
-[Git::Commit]
+[Git::Commit / Commit_Dirty_Files ]
 allow_dirty = Makefile.PL
 commit_msg = Update Makefile.PL
 
@@ -136,7 +136,7 @@ tag_format = release-%v
 
 [BumpVersionAfterRelease]
 
-[Git::Commit]
+[Git::Commit / Commit_Changes ]
 allow_dirty = Changes
 allow_dirty = Makefile.PL
 allow_dirty_match = ^lib
