Revert "remove names referencing DAGOLDEN dzil bundle"
This reverts commit f4fd3df122bbf3cb1338a6b4990430c6ef8f1c83.

--- a/dist.ini
+++ b/dist.ini
@@ -1,3 +1,5 @@
+; This file is generated from dist.ini.meta by dzil bakeini.
+; Edit that file or the bundles contained within for long-term changes.
 name = CPAN-Meta-Requirements
 author = David Golden <dagolden@cpan.org>
 author = Ricardo Signes <rjbs@cpan.org>
@@ -5,144 +7,144 @@ license = Perl_5
 copyright_holder = David Golden and Ricardo Signes
 copyright_year = 2010
 
-[RewriteVersion]
+[RewriteVersion / Dist::Zilla::PluginBundle::DAGOLDEN/RewriteVersion]
 
-[Git::Contributors]
+[Git::Contributors / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Contributors]
 
-[Git::GatherDir]
+[Git::GatherDir / Dist::Zilla::PluginBundle::DAGOLDEN/Git::GatherDir]
 exclude_filename = README.mkdn
 exclude_filename = cpanfile
 exclude_filename = Makefile.PL
 
-[PruneCruft]
+[PruneCruft / Dist::Zilla::PluginBundle::DAGOLDEN/PruneCruft]
 
-[ManifestSkip]
+[ManifestSkip / Dist::Zilla::PluginBundle::DAGOLDEN/ManifestSkip]
 
-[InsertCopyright]
+[InsertCopyright / Dist::Zilla::PluginBundle::DAGOLDEN/InsertCopyright]
 
-[SurgicalPodWeaver]
+[SurgicalPodWeaver / Dist::Zilla::PluginBundle::DAGOLDEN/SurgicalPodWeaver]
 config_plugin = @DAGOLDEN
 post_code_replacer = replace_with_nothing
 replacer = replace_with_comment
 
-[Pod2Readme]
+[Pod2Readme / Dist::Zilla::PluginBundle::DAGOLDEN/Pod2Readme]
 
-[License]
+[License / Dist::Zilla::PluginBundle::DAGOLDEN/License]
 
-[Test::Compile]
+[Test::Compile / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Compile]
 fake_home = 1
 xt_mode = 1
 
-[Test::MinimumVersion]
+[Test::MinimumVersion / Dist::Zilla::PluginBundle::DAGOLDEN/Test::MinimumVersion]
 max_target_perl = 5.010
 
-[Test::ReportPrereqs]
+[Test::ReportPrereqs / Dist::Zilla::PluginBundle::DAGOLDEN/Test::ReportPrereqs]
 
-[Test::PodSpelling]
+[Test::PodSpelling / Dist::Zilla::PluginBundle::DAGOLDEN/Test::PodSpelling]
 stopwords = invocant
 stopwords = dist
 
-[Test::Perl::Critic]
+[Test::Perl::Critic / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Perl::Critic]
 
-[MetaTests]
+[MetaTests / Dist::Zilla::PluginBundle::DAGOLDEN/MetaTests]
 
-[PodSyntaxTests]
+[PodSyntaxTests / Dist::Zilla::PluginBundle::DAGOLDEN/PodSyntaxTests]
 
-[PodCoverageTests]
+[PodCoverageTests / Dist::Zilla::PluginBundle::DAGOLDEN/PodCoverageTests]
 
-[Test::Portability]
+[Test::Portability / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Portability]
 options = test_one_dot = 0
 
-[Test::Version]
+[Test::Version / Dist::Zilla::PluginBundle::DAGOLDEN/Test::Version]
 
-[Authority]
+[Authority / Dist::Zilla::PluginBundle::DAGOLDEN/Authority]
 authority = cpan:DAGOLDEN
 do_munging = 0
 
-[MinimumPerl]
+[MinimumPerl / Dist::Zilla::PluginBundle::DAGOLDEN/MinimumPerl]
 
-[AutoPrereqs]
+[AutoPrereqs / Dist::Zilla::PluginBundle::DAGOLDEN/AutoPrereqs]
 skip = ^t::lib
 
-[MetaNoIndex]
+[MetaNoIndex / Dist::Zilla::PluginBundle::DAGOLDEN/MetaNoIndex]
 directory = t
 directory = xt
 directory = examples
 directory = corpus
 package = DB
 
-[MetaProvides::Package]
+[MetaProvides::Package / Dist::Zilla::PluginBundle::DAGOLDEN/MetaProvides::Package]
 meta_noindex = 1
 
-[GithubMeta]
+[GithubMeta / Dist::Zilla::PluginBundle::DAGOLDEN/GithubMeta]
 issues = 1
 remote = origin
 remote = github
 
-[Prereqs::AuthorDeps]
+[Prereqs::AuthorDeps / Dist::Zilla::PluginBundle::DAGOLDEN/Prereqs::AuthorDeps]
 ; authordep Pod::Weaver::PluginBundle::DAGOLDEN
 
-[MetaYAML]
+[MetaYAML / Dist::Zilla::PluginBundle::DAGOLDEN/MetaYAML]
 
-[MetaJSON]
+[MetaJSON / Dist::Zilla::PluginBundle::DAGOLDEN/MetaJSON]
 
-[CPANFile]
+[CPANFile / Dist::Zilla::PluginBundle::DAGOLDEN/CPANFile]
 
-[ExecDir]
+[ExecDir / Dist::Zilla::PluginBundle::DAGOLDEN/ExecDir]
 
-[ShareDir]
+[ShareDir / Dist::Zilla::PluginBundle::DAGOLDEN/ShareDir]
 
-[MakeMaker]
+[MakeMaker / Dist::Zilla::PluginBundle::DAGOLDEN/MakeMaker]
 default_jobs = 9
 eumm_version = 6.17
 
-[PromptIfStale]
+[PromptIfStale / Dist::Zilla::PluginBundle::DAGOLDEN/PromptIfStale]
 check_all_plugins = 1
 modules = Dist::Zilla
 
-[CopyFilesFromBuild::Filtered]
+[CopyFilesFromBuild::Filtered / Dist::Zilla::PluginBundle::DAGOLDEN/CopyFilesFromBuild::Filtered]
 copy = Makefile.PL
 
-[Manifest]
+[Manifest / Dist::Zilla::PluginBundle::DAGOLDEN/Manifest]
 
-[Git::CheckFor::CorrectBranch]
+[Git::CheckFor::CorrectBranch / Dist::Zilla::PluginBundle::DAGOLDEN/Git::CheckFor::CorrectBranch]
 
-[Git::Check]
+[Git::Check / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Check]
 allow_dirty = Makefile.PL
 
-[CheckMetaResources]
+[CheckMetaResources / Dist::Zilla::PluginBundle::DAGOLDEN/CheckMetaResources]
 
-[CheckPrereqsIndexed]
+[CheckPrereqsIndexed / Dist::Zilla::PluginBundle::DAGOLDEN/CheckPrereqsIndexed]
 
-[CheckChangesHasContent]
+[CheckChangesHasContent / Dist::Zilla::PluginBundle::DAGOLDEN/CheckChangesHasContent]
 
-[RunExtraTests]
+[RunExtraTests / Dist::Zilla::PluginBundle::DAGOLDEN/RunExtraTests]
 default_jobs = 9
 
-[TestRelease]
+[TestRelease / Dist::Zilla::PluginBundle::DAGOLDEN/TestRelease]
 
-[ConfirmRelease]
+[ConfirmRelease / Dist::Zilla::PluginBundle::DAGOLDEN/ConfirmRelease]
 
-[UploadToCPAN]
+[UploadToCPAN / Dist::Zilla::PluginBundle::DAGOLDEN/UploadToCPAN]
 
-[Git::Commit / Commit_Dirty_Files ]
+[Git::Commit / Dist::Zilla::PluginBundle::DAGOLDEN/Commit_Dirty_Files]
 allow_dirty = Makefile.PL
 commit_msg = Update Makefile.PL
 
-[Git::Tag]
+[Git::Tag / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Tag]
 tag_format = release-%v
 
-[NextRelease]
+[NextRelease / Dist::Zilla::PluginBundle::DAGOLDEN/NextRelease]
 
-[BumpVersionAfterRelease]
+[BumpVersionAfterRelease / Dist::Zilla::PluginBundle::DAGOLDEN/BumpVersionAfterRelease]
 
-[Git::Commit / Commit_Changes ]
+[Git::Commit / Dist::Zilla::PluginBundle::DAGOLDEN/Commit_Changes]
 allow_dirty = Changes
 allow_dirty = Makefile.PL
 allow_dirty_match = ^lib
 commit_msg = After release: bump $VERSION and timestamp Changes
 
-[Git::Push]
+[Git::Push / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Push]
 push_to = origin
 
 [MakeMaker::Highlander]
