dist.ini: correct release branch is main

--- a/dist.ini
+++ b/dist.ini
@@ -108,6 +108,7 @@ copy = Makefile.PL
 [Manifest / Dist::Zilla::PluginBundle::DAGOLDEN/Manifest]
 
 [Git::CheckFor::CorrectBranch / Dist::Zilla::PluginBundle::DAGOLDEN/Git::CheckFor::CorrectBranch]
+release_branch = main
 
 [Git::Check / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Check]
 allow_dirty = Makefile.PL
