dist.ini: push to github, not origin

--- a/dist.ini
+++ b/dist.ini
@@ -146,7 +146,7 @@ allow_dirty_match = ^lib
 commit_msg = After release: bump $VERSION and timestamp Changes
 
 [Git::Push / Dist::Zilla::PluginBundle::DAGOLDEN/Git::Push]
-push_to = origin
+push_to = github
 
 [MakeMaker::Highlander]
 :version = 0.003
