--- a/.github/workflows/multiperl-test.yml
+++ b/.github/workflows/multiperl-test.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
+    permissions:
+      contents: read
     steps:
       - name: Check out repo
         uses: actions/checkout@v3
@@ -48,6 +50,9 @@ jobs:
       PERL_USE_UNSAFE_INC: 0
       AUTHOR_TESTING: 1
       AUTOMATED_TESTING: 1
+
+    permissions:
+      checks: write
 
     runs-on: ubuntu-latest
 
