dist.ini: update author name

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@
 ; Edit that file or the bundles contained within for long-term changes.
 name = CPAN-Meta-Requirements
 author = David Golden <dagolden@cpan.org>
-author = Ricardo Signes <rjbs@cpan.org>
+author = Ricardo Signes <cpan@semiotic.systems>
 license = Perl_5
 copyright_holder = David Golden and Ricardo Signes
 copyright_year = 2010
