dist.ini: bring back "origin" remote
...so that it works in CI.

--- a/dist.ini
+++ b/dist.ini
@@ -79,6 +79,7 @@ meta_noindex = 1
 [GithubMeta / Dist::Zilla::PluginBundle::DAGOLDEN/GithubMeta]
 issues = 1
 remote = github
+remote = origin
 
 [Prereqs::AuthorDeps / Dist::Zilla::PluginBundle::DAGOLDEN/Prereqs::AuthorDeps]
 ; authordep Pod::Weaver::PluginBundle::DAGOLDEN
